# Factory_mode

./: CMakeLists.txt
include/: base.h  factory.h  testA.h  testB.h  testC.h
src/: base.cpp  factory.cpp  main.cpp  testA.cpp  testB.cpp  testC.cpp
